--- a/.github/workflows/mainflow.yml
+++ b/.github/workflows/mainflow.yml
@@ -29,9 +29,9 @@ jobs:
       run: | 
         python -m pip install --upgrade pip
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
-        pip install requirements.txt
+        pip install -r requirements.txt
 
     - name: Test with flake8
       run: |
-        python -m flake8 --config=backend/foodgram_api/setup.cfg
+        python -m flake8
           
